search: don't search recursively on network locations

It's too slow to search recursively on locations that are on the
network. For that case, just search in the current folder.

https://bugzilla.gnome.org/show_bug.cgi?id=725939